<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_persons">Persons</string>
    <string name="title_activity_vehicles">Vehicles</string>
    <string name="title_activity_routes">Routes</string>
    <string name="title_activity_segments">Segments</string>
    <string name="title_activity_trips">Trips</string>
    <string name="title_activity_add_transaction">Add payment</string>
    <string name="title_activity_add_new_passenger">Add New Passenger</string>
    <string name="user">User</string>
    <string name="value_to_receive">Value to receive</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="from">From</string>
    <string name="to">To</string>
	<string name="payer">Payer</string>
    <string name="receiver">Receiver</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="initials">Initials</string>
    <string name="usual_route">Usual Route</string>
    <string name="route_name_example">Ex. London-Sutton</string>
    <string name="touch_to_add_segments">Touch to add new segments to this route</string>
    <string name="segment_name_example">Ex. London-Mitcham, Mitcham-Sutton</string>
    <string name="distance">Distance (km)</string>
    <string name="distance_example" translatable="false">Ex. 10</string>
    <string name="cost">Cost</string>
    <string name="cost_example" translatable="false">Ex. 2.5 €</string>
    <string name="vehicle_name" translatable="false">Ex. Corolla</string>
    <string name="consumption">Consumption</string>
    <string name="consumption_example" translatable="false">Ex. 2.0</string>
    <string name="owner">Owner</string>
    <string name="edit_button_description">Edit this info</string>
    <string name="delete_button_description">Remove this entity</string>
    <string name="edit_person">Edit Person</string>
    <string name="add_person">Add Person</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="error">Error</string>
    <string name="initials_in_use">These initials are already in use. Choose other initials.</string>
    <string name="name_in_use">This name is already in use. Choose another name.</string>
    <string name="all_fields_mandatory">All fields are mandatory.</string>
    <string name="person">Person</string>
    <string name="person_added">Person added.</string>
    <string name="edit_success">Edited successfully</string>
    <string name="edit_error">It was not possible to edit </string>
    <string name="edit_route">Edit Route</string>
    <string name="add_route">Add Route</string>
    <string name="route_name_mandatory">Route name is mandatory.</string>
    <string name="route">Route</string>
    <string name="route_added">Route added.</string>
    <string name="select_segments">Select the desired segments</string>
    <string name="edit_segment">Edit Segment</string>
    <string name="add_segment">Add Segment</string>
    <string name="segment">Segment</string>
    <string name="segment_added">Segment added.</string>
    <string name="segment_edited">Segment edited successfully.</string>
    <string name="segment_error">It was not possible to edit this segment.</string>
    <string name="app_name">Split the ride</string>
    <string name="title_activity_passengers_by_trips">Passengers</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_trips_in_date">Trips at this date</string>


</resources>
