<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.splitTheRide.settings.RoutesView" >

	<TableLayout android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginTop="10dp"
    			android:shrinkColumns="*"
    			android:stretchColumns="*" >
    
    	<TableRow android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:paddingTop="10dp">
        
        	<TextView android:id="@+id/textView1"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_gravity="center_vertical"
        			android:text="@string/name"
        			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        	<EditText android:id="@+id/route_name"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:ems="10"
        			android:hint="@string/route_name_example" />
        
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:paddingTop="10dp">
        
        	<TextView android:id="@+id/textView2"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_gravity="center_vertical"
        			android:text="@string/title_activity_settings"
        			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        	<ScrollView android:id="@+id/ScrollView01"
						android:layout_width="120dip" 
						android:layout_height="150dip">
						
				<TextView android:id="@+id/route_segments" 
				    	android:layout_width="fill_parent"
				    	android:layout_height="fill_parent"
				    	android:padding="5dp"
						android:layout_gravity="center_vertical"
						android:clickable="true"
						android:onClick="addEditSegments"
						android:text="@string/touch_to_add_segments"
				></TextView>
			</ScrollView>
        
    	</TableRow>
    	
    </TableLayout>


	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal" >
    	
	    <Button android:id="@+id/ok"
	    		android:layout_width="120dp"
	    		android:layout_height="wrap_content"
	    		android:text="@string/ok" />

   		<Button android:id="@+id/cancel"
   	    		android:layout_width="120dp"
   	    		android:layout_height="wrap_content"
   	    		android:text="@string/cancel" />
	    
	</LinearLayout>

	
</LinearLayout>
