<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.splitTheRide.settings.RoutesView" >

	<TableLayout android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginTop="10dp"
    			android:shrinkColumns="*"
    			android:stretchColumns="*" >
    			
	    <TableRow android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:paddingTop="10dp">
        
        	<TextView android:id="@+id/textView1"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
                    android:layout_weight="1"
        			android:layout_gravity="center_vertical"
        			android:text="@string/name"
        			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        	<EditText android:id="@+id/segment_name"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
                    android:layout_weight="1"
        			android:ems="10"
        			android:inputType="text" 
        			android:hint="@string/segment_name_example" />
        
    	</TableRow>
    
    	<TableRow android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:paddingTop="10dp">
        
        	<TextView android:id="@+id/textView2"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
                    android:layout_weight="1"
        			android:layout_gravity="center_vertical"
        			android:text="@string/distance"
        			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        	<EditText android:id="@+id/segment_distance"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
                    android:layout_weight="1"
        			android:ems="10"
        			android:inputType="number" 
        			android:hint="@string/distance_example" />
        
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:paddingTop="10dp">
        
        	<TextView android:id="@+id/textView3"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
                    android:layout_weight="1"
        			android:layout_gravity="center_vertical"
        			android:text="@string/cost"
        			android:textAppearance="?android:attr/textAppearanceMedium" />
        
        	<EditText android:id="@+id/segment_cost"
	    			android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
                    android:layout_weight="1"
	    			android:ems="10"
	    			android:hint="@string/cost"
	    			android:inputType="numberDecimal" >
			</EditText>
        
    	</TableRow>
    	
    </TableLayout>


	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal" >
    	
	    <Button android:id="@+id/ok"
	    		android:layout_width="120dp"
	    		android:layout_height="wrap_content"
                android:layout_weight="1"
	    		android:text="@string/ok" />

   		<Button android:id="@+id/cancel"
   	    		android:layout_width="120dp"
   	    		android:layout_height="wrap_content"
                android:layout_weight="1"
   	    		android:text="@string/cancel" />
	    
	</LinearLayout>

</LinearLayout>
